--- a/Tasks-9Nov/Tasks-9Nov.csproj
+++ b/Tasks-9Nov/Tasks-9Nov.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DiagonalMatrix.cs" />
-    <Compile Include="Point.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="2\DiagonalMatrix.cs" />
+    <Compile Include="2\Lesson.cs" />
+    <Compile Include="2\Point.cs" />
+    <Compile Include="2\PracticalLesson.cs" />
+    <Compile Include="2\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="2\Training.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
